fix - header z-index

--- a/app/styles/app.css
+++ b/app/styles/app.css
@@ -258,7 +258,7 @@ body.no-scroll {
   display: flex;
   height: var(--header-height);
   padding: 0 1rem;
-  z-index: 9999;
+  z-index: 9;
   background: rgba(168, 10, 21, 1);
   box-shadow: 0px 4px 5px 0px #00000040;
   position: sticky;
